--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-
 .venv/
 .vscode/
-art2/
-art3/
-art4/
-articles/
+art*/
 src/
 /__pycache__/
 index/
 sqlite3.log
 .gitignore
 test.py
-articles_test_2/
-articles_test_3/
+zip/
+test2.py
+*.txt
